[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "nextline-schedule"
description = 'A plugin of nextline-graphql. An interface to the SO scheduler.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Simons Observatory", email = "so_software@simonsobservatory.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "nextline>=0.7.13",
  "nextline-graphql>=0.7.8",
  "transitions>=0.9",
  "httpx>=0.23",
  "hypothesis>=6.65",
  "black>=23.10",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "pytest-asyncio>=0.18",
  "pytest-cov>=3.0",
  "pytest-timeout>=2.1",
  "pytest>=7.0",
  "pytest-httpx>=0.21.3",
  "deepdiff>=7.0",
]


[project.urls]
Documentation = "https://github.com/simonsobs/nextline-schedule#readme"
Issues = "https://github.com/simonsobs/nextline-schedule/issues"
Source = "https://github.com/simonsobs/nextline-schedule"

[project.entry-points."nextline_graphql"]
schedule = "nextline_schedule:Plugin"

[tool.hatch.version]
source = "regex_commit"
path = "src/nextline_schedule/__about__.py"
tag_sign = false

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov"]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/nextline_schedule --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311", "312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 60
addopts = "--doctest-modules"
# doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE",]
doctest_optionflags = ["ELLIPSIS"]
norecursedirs = "build"
filterwarnings = ["ignore::hypothesis.errors.NonInteractiveExampleWarning"]
log_cli = false
log_cli_level = "INFO"

[tool.black]
skip-string-normalization = true
target_version = ['py310', 'py311', 'py312']

[tool.coverage.run]
branch = true
parallel = true
source = ["src/nextline_schedule", "tests"]
# omit = ["src/nextline_schedule/__about__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"

[tool.mypy]
plugins = "strawberry.ext.mypy_plugin"

[[tool.mypy.overrides]]
module = ["dynaconf.*", "async_asgi_testclient.*", "apluggy.*", "deepdiff.*"]
ignore_missing_imports = true
